# wrknoob

./: LICENSE  README.md  pyproject.toml  requirements.txt  wrknoob.py
.github/workflows/: main.yml
src/wrknoob.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
